--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-particles-js": "^3.5.3",
     "react-popupbox": "^2.0.8",
+    "react-responsive-carousel": "^3.2.19",
     "react-scripts": "^1.1.5",
     "react-typed": "^1.2.0",
     "web-vitals": "^1.1.2"
