--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-popupbox": "^2.0.8",
     "react-responsive-carousel": "^3.2.19",
     "react-scripts": "^1.1.5",
+    "react-share": "^4.4.0",
     "react-typed": "^1.2.0",
     "web-vitals": "^1.1.2"
   },
